  - added blue ball icon to identify Suggestions
  - properly display recording quality, added [HD], DIGITAL, and UNKNOWN types
  - fixed channel/station display issue
  - show copy-protected recordings (to be consistent with TiVo Desktop and other
    Now Playing List applications); identify with lock icon
  - fixed display of Length statistic on main Now Playing screen


Version 2.5.4:
----------------------
* Fix ToGo looping bug on null recording date (1811137)
* Added user-selectable range for local radar image (100, 300, 600 miles) in Weather
* auto-subdirectory publishing for GoBack, avoids the need to do it yourself
  and also avoids bugs in TiVo folder navigation in older TiVo service
  releases (Series 3 and HD should be OK without this).
  (Probably needs some work to handle DOS shortcuts; should be OK on
  UNIX and OS X.)

* XML parsing of recording meta-data for non-Galleon-created video files
  in GoBack areas.  e.g. if you post-process .TiVo files into .mpg, just
  put the XML output containing the show details, in the same format as
  it comes from the TiVo, into a .xml file with the same prefix.  If you
  use tivodecode to unwrap .TiVo files, the metadata are in the
  -02-0002.xml file generated with the -D (dump-metadata) option.

* Enabled store-by-show handling in GoBack server (available on
  GoBack preferences pane).
* Fix for linux Makefile (1815568) and init script for distro independence

Version 2.5.3:
----------------------
* Update JmDNS package to 1.0 (not using JmDNS from
  hme-host-sample-1.4.jar anymore); seems to help on Mac OS X 10.5
* Added TiVo name to detail screen in ToGo app
* Updated weather forecast parsing to handle more cases
* Fixed local radar after change on weather source web pages
* Update help URLs to point at content now on sourceforge.net
* Fixed iPhoto album parser to clean out old albums during library
  update.



Version 2.5.2:
----------------------