@@ -295,193 +295,6 @@ ClassPath:
   SetOutPath "$INSTDIR\lib"
   CreateShortCut "$SMPROGRAMS\${PRODUCT_NAME}\Configure.lnk" "$SYSDIR\javaw.exe" '-classpath ..\conf\;galleon.jar;log4j-1.2.14.jar;forms.jar;commons.jar;concurrent.jar;hibernate.jar;jdbc2_0-stdext.jar;jmdns-1.0.jar;hme-1.4.jar;hme-host-sample-1.4.jar;dom4j-1.6.1.jar;browserlauncher.jar org.lnicholls.galleon.gui.Galleon' "$INSTDIR\media\images\galleon.ico"
 
-; TiVo Beacon SDK
-; Locate The TiVo Beacon Folder (if any).
-; Check the VERSIONINFO of the currently-installed TiVoBeaconApi.dll (if any).
-; If your installer does not have a newer version, skip the remaining steps (because a more recent version of the API is already available).
-; Otherwise, unregister the currently-registered TiVo Beacon API (if any).
-; Create The TiVo Beacon Folder (if necessary).
-; Copy your (new) version of TiVoBeaconApi.dll into the folder (overwriting the old file as required).
-; If your installer is unable to overwrite the old file (because it is currently in use), arrange for Windows to restart and
-; the file to be replaced at that time.
-; Register the TiVo Beacon API (either immediately or during Windows startup if needed).
-
-; Windows 98 does NOT provide a special system folder for "common" program files, whereas Windows Me, XP,
-; and 2000 all do.  Because of this, the TiVo Shared folder exists directly in the "Program Files" folder
-; under 98.  Under XP/2000/Me, it exists in the newer "Common Files" folder (typically a sub-folder of "Program Files").
-TiVoBeacon:
-  IfFileExists "$COMMONFILES" 0 NoCommon
-  StrCpy $0 "$COMMONFILES"
-  Goto CheckCurrentVersion
-
-NoCommon:
-  StrCpy $0 "$PROGRAMFILES"
-
-CheckCurrentVersion:
-  IfFileExists "$0\TiVo Shared\Beacon\TiVoBeacon.exe" 0 CreateBeaconDir
-  DetailPrint "Determining TiVo Beacon version: $0\TiVo Shared\Beacon\TiVoBeacon.exe"
-  GetDLLVersion "$0\TiVo Shared\Beacon\TiVoBeacon.exe" $R0 $R1
-  IntOp $R2 $R0 / 0x00010000 ; $R2 now contains major version
-  IntOp $R3 $R0 & 0x0000FFFF ; $R3 now contains minor version
-  IntOp $R4 $R1 / 0x00010000 ; $R4 now contains release
-  IntOp $R5 $R1 & 0x0000FFFF ; $R5 now contains build
-  StrCpy $1 "$R2.$R3" ; $1 now contains string like "1.1.15.530"
-  DetailPrint "TiVo Beacon version $1"
-  StrCmp $1 "1.1" StopTivo 0
-
-  Push "installed"
-  Push "TiVoBeacon2"
-  Push "action=status;"
-  Call Service
-  Pop $1 ;response
-  StrCmp $1 "running" StartBeaconService
-  StrCmp $1 "stopped" StartBeaconService
-  StrCmp $1 "false" StopTivo  ; not installed
-StopTivo:
-  DetailPrint "Finding TiVo Beacon service"
-  ; Check if TiVo beacon is running
-  Push "installed"
-  Push "TiVoBeacon2"
-  Push "action=status;"
-  Call Service
-  Pop $1 ;response
-  ;StrCmp $0 "running" 0 RemoveTiVoBeacon
-  StrCmp $1 "stopped" RemoveTiVoBeacon
-  StrCmp $1 "false" InstallBeaconService  ; not installed
-  DetailPrint "Stopping TiVo Beaconservice"
-  Push "stop"
-  Push "TiVoBeacon2"
-  Push "action=status;"
-  Call Service
-  Pop $1 ;response
-  StrCmp $1 "true" RemoveTiVoBeacon
-  DetailPrint "The TiVo Beacon service could not be stopped."
-  Goto InstallService
-
-RemoveTiVoBeacon:
-  DetailPrint "Removing old TiVo Beacon service"
-  Push "delete"
-  Push "TiVoBeacon2"
-  Push "action=status;"
-  Call Service
-  Pop $1 ;response
-  StrCmp $1 "true" CopyBeaconFiles
-  DetailPrint "The old TiVo Beacon service could not be removed."
-  Goto InstallService
-
-StopTivo2:
-  DetailPrint "Finding TiVo Beacon 1.1 service"
-  ; Check if TiVo beacon is running
-  Push "installed"
-  Push "TiVoBeacon2"
-  Push "action=status;"
-  Call Service
-  Pop $1 ;response
-  ;StrCmp $0 "running" 0 RemoveTiVoBeacon2
-  StrCmp $1 "stopped" RemoveTiVoBeacon2
-  StrCmp $1 "false" CopyBeaconFiles  ; not installed
-
-  DetailPrint "Stopping TiVo 1.1 Beaconservice"
-  Push "stop"
-  Push "TiVoBeacon2"
-  Push "action=status;"
-  Call Service
-  Pop $1 ;response
-  StrCmp $1 "true" RemoveTiVoBeacon2
-  DetailPrint "The TiVo Beacon service could not be stopped."
-  Goto InstallService
-
-RemoveTiVoBeacon2:
-  DetailPrint "Removing old TiVo Beacon 1.1 service"
-  Push "delete"
-  Push "TiVoBeacon2"
-  Push "action=status;"
-  Call Service
-  Pop $1 ;response
-  StrCmp $1 "true" CopyBeaconFiles
-  DetailPrint "The old TiVo Beacon service could not be removed."
-  Goto InstallService
-
-CreateBeaconDir:
-  DetailPrint "Creating TiVo Beacon service directory"
-  IfFileExists "$0\TiVo Shared\Beacon" CopyBeaconFiles 0
-  CreateDirectory "$0\TiVo Shared\Beacon"
-
-CopyBeaconFiles:
-  DetailPrint "Copying TiVo Beacon service files"
-  SetOutPath "$0\TiVo Shared\Beacon"
-  File "${PRODUCT_BUILD_DIR}\lib\TiVoBeacon.exe"
-
-RegisterApi:
-; http://nsis.sourceforge.net/archive/viewpage.php?pageid=38
-; Macro - Upgrade DLL File
-; Written by Joost Verburg
-; ------------------------
-;
-; Parameters:
-; LOCALFILE   - Location of the new DLL file (on the compiler system)
-; DESTFILE    - Location of the DLL file that should be upgraded
-;              (on the user's system)
-; TEMPBASEDIR - Directory on the user's system to store a temporary file
-;               when the system has to be rebooted.
-;               For Win9x support, this should be on the same volume as the
-;               DESTFILE!
-;               The Windows temp directory could be located on any volume,
-;               so you cannot use  this directory.
-;
-; Define UPGRADEDLL_NOREGISTER if you want to upgrade a DLL that does not
-; have to be registered.
-;
-; Note: If you want to support Win9x, you can only use
-;       short filenames (8.3).
-;
-
-InstallBeaconService:
-  DetailPrint "Installing TiVo Beacon service"
-;   create	- creates a new windows service
-;		Parameters:
-;		  path	- path to service executable
-;		  autostart	- automatically start with system ie. 1|0
-;		  interact	- interact with the desktop ie. 1|0
-;		  machine	- machine name where to install service
-;		  user		- user that runs the service
-;		  password	- password of the above user
-  Push "create"
-  Push "TiVoBeacon2"
-  Push 'path="$0\TiVo Shared\Beacon\TiVoBeacon.exe" /quiet;autostart=1;interact=1;'
-  Call Service
-  Pop $1 ;response
-  StrCmp $1 "true" StartBeaconService
-  DetailPrint "The TiVo Beacon service could not be installed: $0"
-  Goto InstallService
-
-StartBeaconService:
-  DetailPrint "Registering TiVo Beacon API"
-  !insertmacro UpgradeDLL "${PRODUCT_BUILD_DIR}\lib\TiVoBeaconApi.dll" "$0\TiVo Shared\Beacon\TiVoBeaconApi.dll" "$SYSDIR"
-  ;http://nsis.sourceforge.net/archive/viewpage.php?pageid=385
-  ; Is service already installed?
-  Push "installed"
-  Push "TiVoBeacon2"
-  Push "action=status;"
-  Call Service
-  Pop $0 ;response
-  StrCmp $0 "running" InstallService
-  StrCmp $0 "false" ErrorTiVoBeacon  ; not installed
-  ; Start TiVo Beacon service
-  DetailPrint "Starting TiVo Beacon service"
-  Push "start"
-  Push "TiVoBeacon2"
-  Push "action=status;"
-  Call Service
-  Pop $0 ;response
-  StrCmp $0 "true" RemoveTiVoBeacon
-  Sleep 5000
-
-ErrorTiVoBeacon:
-  ;MessageBox MB_ICONEXCLAMATION|MB_OK "The TiVo Beacon service could not be started."
-  DetailPrint "The TiVo Beacon service could not be started."
-
-
 InstallService:
   Push "installed"
   Push "${PRODUCT_NAME}"
@@ -578,8 +391,6 @@ Done:
   Pop $0 ;response
   StrCmp $0 "running" End
   StrCmp $0 "start_pending" End
-  ;StrCmp $0 "stopped" RemoveTiVoBeacon2
-  ;StrCmp $0 "false" CopyBeaconFiles  ; not installed
   StrCpy ${STATUS} "error"
   MessageBox MB_ICONINFORMATION|MB_OK "The ${PRODUCT_NAME} service could not be started. Try to manually start Galleon using Control Panel/Adminstrative Tools/Services."
   ; Quit
